# animation

./: .editorconfig  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: animate.rs  coroutines.rs
examples/widgets/: column.rs
flow/: Cargo.toml  README.md
flow/src/: block.rs  empty.rs  horizontal.rs  lib.rs
flow/tests/: block.rs  empty.rs  horizontal.rs
ruby/: Cargo.toml
ruby/examples/widgets/: column.rs
ruby/src/: color.rs  element.rs  lib.rs
ruby/src/layout/: mod.rs
ruby/src/widget/: circle.rs  column.rs  mod.rs  rect.rs
ruby/tests/: layout.rs
ruby_core/: Cargo.toml
ruby_core/src/: lib.rs  position.rs  size.rs
src/: lib.rs  position.rs  size.rs
src/widget/: circle.rs  column.rs  mod.rs  rect.rs
