[package]
name = "ruby"
version = "0.1.0"
edition = "2024"


[dependencies]
env_logger = "0.11.8"
log = "0.4.27"
pixels = "0.15.0"
tiny-skia = "0.11.4"
winit.workspace = true
ruby_core = {path = "../ruby_core"}

[[example]]
name = "rect"
path = "examples/widgets/rect.rs"

[[example]]
name = "column"
path = "examples/widgets/column.rs"


